# advent-of-code

./: .clang-format  .cmake-format.yaml  .gitignore  CMakeLists.txt  CMakeSettings.json  Gulpfile.js  Makefile  README.md  benchmark  benchmark.cpp  binaryToDecimal.h  build.sh  lesFil.h  package-lock.json  package.json  parser.h  solve.cpp  solve_all.cpp  split.h  vcpkg.json
.github/workflows/: build_and_test.yml
day 2/: split.hpp
day 2/part1/: input  main.cpp
day 3/: main.cpp
day 5/: main.cpp
day 6/: main.cpp
input/: 12t.txt  16_ranges.txt  16ranges1.txt  16tickets1.txt  18t.txt
source/2019/: 1.h
source/2020/: 10.h  11.h  12.h  12_2.h  13.h  13_2.h  14.h  14_2.h  15.h  16.h  16_2.h  17.h  18.h  19.h  20.h  21.h  22.h  23.h  24.h  25.h  7.h  7_2.h  8.h  8_2.h  9.h  matvare.h
source/2020/day_4/: main.h
source/2020/day_5/: main.cpp  main.h
source/2020/day_6/: main.cpp  main.h
source/day_2/part2/: input  main.cpp
source/day_4/: main.cpp
source/day_5/: main.cpp  main.h
source/day_6/: main.cpp  main.h
source/days/: 10.h  11.h  12.h  17.h  18.h  2019_1.h  21.h  24.h  7.h  7_2.h  8.h  8_2.h  9.h
source/include/: binaryToDecimal.h  common.h  lesFil.h  offsets.h  parser.h  split.h  tokenize.h  utils.h
